--- a/CS316/styles/stylesheet.css
+++ b/CS316/styles/stylesheet.css
@@ -19,7 +19,15 @@ cite, figcaption {
 }
 summary {
     font-size: 28pt;
-    color: rgb(0,153,153);
+    color: rgb(102,179,255);
+}
+details > summary {
+    list-style: none;
+    display: block;
+    background-color: rgb(0,34,204);
+    width: 500px;
+    box-shadow: 5px 5px;
+    padding-left: 3px;
 }
 a:link, figcaption {
     color: rgb(153,204,255);
@@ -27,31 +35,67 @@ a:link, figcaption {
 a:visited {
     color: rgb(179,102,255);
 }
-p, li, h4, a:hover, summary:hover {
+p, li, h4, a:hover, summary:hover, label{
     color: rgb(255,238,230);
     padding-left: 15px;
     padding-right: 15px;
 }
+details > summary:hover {
+    background-color: rgb(102,179,255);
+    box-shadow: 7px 7px;
+ 
+}
 h4, hr {
     font-weight: bold;
 }
+table {
+    border: solid 3pt rgb(140,146,172);
+    border-collapse: collapse;
+}
+td, th{
+    border: solid 2pt rgb(140,146,172);
+    padding: 10pt;
+}
+td {
+    color: rgb(255,238,230);
+}
+thead {
+    background-color: rgb(153,204,255);
+}
+tr:hover {
+    background-color: rgb(179,102,255);
+    color: rgb(255,238,230);
+}
+legend {
+    font-size: 16pt;
+    color: rgb(102,179,255);
+}
 .pageHeader {
     font-size: 24pt;
-    color: rgb(179,102,255);
+    color: rgb(247,255,204);
 }
 .secHeader {
     font-size: 20pt;
-    color: rgb(140,146,172);
+    color: rgb(247,255,204);
 }
 .subHeader {
     font-size: 16pt;
-    color: rgb(0,153,153);
+    color: rgb(102,179,255);
+}
+.restuarantLogo {
+    margin: 0px;
+    padding: 0px;
+}
+#requestType1, #requestType2 {
+    color: rgb(255,238,230);
 }
 #quote {
     font-family: Verdana, sans-serif;
     font-size: 18pt;
     color: black;
-    background-color: rgb(0,153,153);
+    /*background-color: rgb(0,153,153);
+     */
+    background-color: rgb(102,179,255);
     margin: 15px;
     padding: 10px;
 }
@@ -61,4 +105,18 @@ h4, hr {
 #profilePic {
     margin-top: 0px;
     padding: 0px;
+}
+#tableCaption, thead {
+    font-family: Arial, sans-serif;
+    font-size: 16pt;
+    color: black;
+    margin: 0px;
+    padding: 8px;
+}
+#tableCaption {
+    background-color: rgb(102,179,255);
+    border: solid 3pt rgb(140,146,172);
+}
+#bourbonNToulouse {
+    width: 500px;
 }
