Restructure to support new layout
I am going to be adding a new layout, so I am restructuring the page to
support this. Now, the website is separated into a bunch of different
web pages, each with the same navigaiton bar. Now I need to apply the
css from project 3 to get it to look the same and then add the layouts.

CS316 Project 4

--- a/CS316/project4/styles/stylesheet.css
+++ b/CS316/project4/styles/stylesheet.css
@@ -70,6 +70,8 @@ legend {
     font-size: 16pt;
     color: rgb(102,179,255);
 }
+.page {
+}
 .pageHeader {
     font-size: 24pt;
     color: rgb(247,255,204);
@@ -100,7 +102,7 @@ legend {
     padding: 10px;
 }
 #headshot {
-    width: 200px;
+    width: 10%;
 }
 #profilePic {
     margin-top: 0px;
