--- a/CS316/project4/styles/constants.css
+++ b/CS316/project4/styles/constants.css
@@ -17,7 +17,79 @@ h1 {
 cite, figcaption {
     font-size: 12pt;
 }
-nav > a {
+nav > a, nav > a:visited {
     font-size: 28pt;
     color: rgb(102,179,255);
+    list-style: none;
+    display: block;
+    background-color: rgb(0,34,204);
+    width: 500px;
+    box-shadow: 5px 5px;
+    padding-left: 3px;
+    text-decoration: none;
+}
+nav > a:hover {
+    background-color: rgb(102,179,255);
+    box-shadow: 7px 7px;
+    text-decoration: none;
+    color: rgb(255,238,230);
+    padding-left: 15px;
+    padding-right: 15px;
+    text-decoration: none;
+}
+p, li, h4, label, a:hover {
+    color: rgb(255,238,230);
+    padding-left: 15px;
+    padding-right: 15px;
+    text-decoration: none;
+}
+a:link, figcaption {
+    color: rgb(153,204,255);
+}
+a:visited {
+    color: rgb(179,102,255);
+}
+h4, hr {
+    font-weight: bold;
+}
+table {
+    border: solid 3pt rgb(140,146,172);
+    border-collapse: collapse;
+}
+td, th{
+    border: solid 2pt rgb(140,146,172);
+    padding: 10pt;
+}
+td {
+    color: rgb(255,238,230);
+}
+thead {
+    background-color: rgb(153,204,255);
+}
+tr:hover {
+    background-color: rgb(179,102,255);
+    color: rgb(255,238,230);
+}
+legend {
+    font-size: 16pt;
+    color: rgb(102,179,255);
+}
+.contentHeader {
+    font-size: 24pt;
+    color: rgb(247,255,204);
+}
+.secHeader {
+    font-size: 20pt;
+    color: rgb(247,255,204);
+}
+.subHeader {
+    font-size: 16pt;
+    color: rgb(102,179,255);
+}
+#headshot {
+    width: 10%;
+}
+#profilePic {
+    margin-top: 0px;
+    padding: 0px;
 }
