--- a/CS316/project5/styles/constants.css
+++ b/CS316/project5/styles/constants.css
@@ -102,6 +102,14 @@ textarea {
     padding: 5pt;
     text-align: center;
 }
+.headerContent {
+    width: 100%;
+    float: left;
+}
+#theme {
+    float: right;
+    padding: 10pt;
+}
 #headshot {
     width: 10%;
 }
